fix: contact section input too small

--- a/src/css/_media.scss
+++ b/src/css/_media.scss
@@ -194,14 +194,47 @@
    }
 
    .projects {
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr;
    }
 
    .service-container {
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr;
    }
 
+
+
+
+   .contact-content-con {
+      flex-direction: column;
+
+      margin-bottom: 6rem;
+      .right-contact {
+         margin-left: 0;
+         margin-top: 2.5rem;
+
+         .i-c-2 {
+            flex-direction: column;
+            & :last-child {
+               margin-left: 0;
+               margin-top: 1.5rem !important;
+            }
+         }
+      }
+   }
+
+
+
+
+
+
+
 }
+
+
+
+
+
+
 
 
 
@@ -219,6 +252,11 @@
 
      
    }
+
+
+
+
+
 }
 
 
