--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -77,7 +77,7 @@ section {
 
 .section {
    transform: translateX(100%);
-   transition: 5s ease-in-out;
+   transition: 0.6s ease-in-out;
    background-color: var(--color-primary);
 
    &.active {
@@ -139,12 +139,17 @@ section {
       justify-content: center;
       margin: 0.8rem 0;
       box-shadow: var(--box-shadow-1);
+      transition: background-color, transform, 0.6s ease-in-out;
 
       i {
          font-size: 1.3rem;
          color: var(--color-grey0);
          pointer-events: none;
       }
+   }
+
+   :active {
+      transform: translateX(15px);
    }
 
    .active-navigator {
@@ -175,7 +180,7 @@ section {
    transition: all 0.1s ease-in-out;
 
    &:active {
-      transform: translateX(-3px);
+      transform: translateX(15px);
    }
 
    .toggler {
@@ -226,8 +231,6 @@ section {
          left: 0;
          z-index: -1;
          background-color: var(--color-secondary);
-         // clip-path: polygon(0 0, 53% 0, 100% 100%, 0 100%);
-         // display: none;
          border-radius: 50%;
          display: flex;
          justify-content: center;
@@ -235,47 +238,12 @@ section {
       }
 
       .img-container {
-         // border-radius: var(--br-sm-2);
          height: 95%;
          width: 95%;
          background-color: var(--color-grey-6);
          transition: all 0.6s ease-in-out;
          border-radius: 50%;
          overflow: hidden;
-         // position: absolute;
-
-         &:hover {
-            animation: bounce 1s ease-out;
-            background-color: var(--color-primary);
-         }
-
-         @keyframes bounce {
-            0% {
-               transform: translateY(0);
-            }
-            20% {
-               transform: translateY(-40px);
-            }
-
-            40% {
-               transform: translateY(0px);
-            }
-
-            60% {
-               transform: translateY(-20px);
-            }
-
-            80% {
-               transform: translateY(0px);
-            }
-
-            90% {
-               transform: translateY(-5px);
-            }
-            100% {
-               transform: translateY(0);
-            }
-         }
 
          .profile-image {
             width: 100%;
@@ -284,8 +252,6 @@ section {
             transition: all 0.6s ease-in-out;
             border-radius: var(--br-sm-2);
             filter: grayscale(100%);
-
-            // visibility: hidden;
          }
       }
    }
@@ -333,7 +299,7 @@ section {
             box-shadow: var(--box-shadow-3);
             cursor: default;
             transform: translateY(-5px);
-            border: 2px solid var(--color-secondary);
+            border: 2px solid var(--color-secondary)
          }
          .about-text {
             padding: 1.5rem;
@@ -788,7 +754,10 @@ section {
       align-items: center;
 
       a {
-         background-image: linear-gradient(var(--color-secondary),var(--color-secondary)) ;
+         background-image: linear-gradient(
+            var(--color-secondary),
+            var(--color-secondary)
+         );
          border-radius: 50%;
          width: 3rem;
          height: 3rem;
